--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
         <section id="profile">
-            <img src="123.png" alt="Yash Raj" height="500">
+            <img src="Untitled design(8).png" alt="Yash Raj" height="500">
         </section>
         <section id="bio">
             <h2>About Me</h2>
